# MacFlow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  VIDEO_SCRIPT.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  INSTALL.md  SECURITY.md  index.html
landing/: index.html
scripts/: README.md  publish-update.sh  release.sh  sign.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_scanner.rs  applications.rs  cache_cleaner.rs  cache_scanner.rs  dev_tool_rules.rs  docker.rs  lib.rs  main.rs  monitor.rs  ports.rs  process_ops.rs  process_safety.rs  residue_scanner.rs  scanner.rs  storage.rs  tray.rs  uninstaller.rs  whitelist.rs
src/components/: CleanupFlash.tsx  DockerSection.tsx  HealthCard.tsx  ProcessList.tsx  RingProgress.tsx  Sidebar.tsx  Welcome.tsx
src/i18n/: en.ts  index.tsx  zh-CN.ts
src/lib/: cleanFeedback.ts  format.ts  tauri.ts  updater.ts  window-drag.ts
src/views/: ApplicationsView.tsx  CacheView.tsx  DockerView.tsx  HistoryView.tsx  Placeholder.tsx  ProcessView.tsx  ScanView.tsx  SettingsView.tsx  UninstallerView.tsx
