[package]
name = "macflow"
version = "0.1.0"
description = "MacFlow - Mac developer and user system maintenance tool"
authors = ["Edwin Hao"]
edition = "2021"
rust-version = "1.80"
default-run = "macflow"

[lib]
name = "macflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "macflow"
path = "src/main.rs"

[[bin]]
name = "macflow-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-os = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-autostart = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
nix = { version = "0.29", features = ["signal", "process", "user"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = "0.6"
walkdir = "2"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rayon = "1"
which = "7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
